feat: add route to get collections by id and reactoring.
